[project]
name = "koko-film"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mastermao", email = "wego_mao@hotmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/koko_film"]
