[project]
name = "koko-film"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mastermao", email = "wego_mao@hotmail.com" }
]
dependencies = [
    "tqdm>=4.67.1",
    "toml>=0.10.2",
    "pydantic>=2.11.7",
    "exifread>=3.3.1",
    "pandas>=2.3.0",
    "pandas-stubs>=2.2.3.250527",
    "pillow>=11.2.1",
    "halo>=0.0.31",
    "typer>=0.16.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/koko_film"]
